versioned_docs/version-0.9/mark.mdx
---
title: Mark
---
import GoslingSchema from './assets/gosling.schema.json';
import {TableWrapper} from '@site/react-components/DocComponments/table'

Visual marks (e.g., points, lines, and bars) are the basic graphical elements of a visualization. Note here that we call one visualization a `track` in Gosling.
The core of constructing a visualization is to bind selected **data fields** to the **visual channels** (e.g., size, color, and position) of a chosen **mark type**.

The `mark` property of a track is defined by a string that describes the mark type.
```javascript
{
    "tracks":[
     /** a track using rect marks */
      {
        "mark": "rect",
        ... // other track properties
      },

      /** a track using line marks */
      {
        "mark": "line",
        ... // other track properties
      }
    ],
    ... // other visualization properties
}
```
<!-- Gosling supports the following primitive `mark` types: [Point](#point), [Line](#line), 
[Area](#area), [Bar](#bar), [Rect](#rect), [Text](#text), [Link](#link), [Triangle](#triangle). -->

<span> Gosling supports the following strings as <code>mark</code> type: {GoslingSchema['definitions']['Mark']['enum'].map((d, i)=><span><code>"{d}"</code>{i==GoslingSchema['definitions']['Mark']['enum'].length-1?'.': ', '}</span>)}</span>

## Point
[:link: source code](https://github.com/gosling-lang/gosling.js/blob/master/src/core/mark/point.ts)

The mark `point` represents one data point using a circular shape. Visual channels of the circle, such as radius, color, and vertical/horizontal position, are used to represent values of the data point. Popular charts such as scatter plots and bubble charts use `point` mark.

<a href="https://gosling-lang.github.io/gosling.js/?example=doc_point"><img src="/img/doc_images/point_example.png" width="800" alt="point_example"/>  </a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?example=doc_point>)

```javascript
// an example of point marks
{
    "tracks":[{
        "data": {
            "url": ...,
            "type": ...
        },
        // mark type
        "mark": "point",
        // mark visual channels
        "x": {
            "field": "position", // data field
            "type": "genomic", // type of data field
            "axis": "top"
        },
        "y": {
            "field": "peak", 
            "type": "quantitative"
        },
        ... // other encodings and styles
    }]
}
```
## Line
[:link: source code](https://github.com/gosling-lang/gosling.js/blob/master/src/core/mark/line.ts)

The mark `line` represents a set of data points using a line that connects these points.

<a href="https://gosling-lang.github.io/gosling.js/?example=doc_line"><img src="/img/doc_images/line_example.png" width="800" alt="line_example"/>  </a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?example=doc_line>)

```javascript
// an example of using line marks
{
    "tracks":[{
        "data": {
            "url": ...,
            "type": ...
        },
        // specify mark type
        "mark": "line",
        // specify mark visual channels
        "x": {
            "field": "position", // data field
            "type": "genomic", // type of data field
            "axis": "top" // position of the x axis 
        },
        "y": {
            "field": "peak", 
            "type": "quantitative"
        },
        ... // other encodings and styles
    }]
}
```
## Area
[:link: source code](https://github.com/gosling-lang/gosling.js/blob/master/src/core/mark/area.ts)

The mark `area` represents a set of data points as an area shape. The upper edge of the area shape is a line that connects all the points and the bottom edge is the x axis.

<a href="https://gosling-lang.github.io/gosling.js/?example=doc_area"><img src="/img/doc_images/area_example.png" width="800" alt="area_example"/>  </a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?example=doc_area>)

```javascript
// an example of area marks
{
    "tracks":[{
        "data": {
            "url": ...,
            "type": ...
        },
        // mark type
        "mark": "area",
        // mark visual channels
        "x": {
            "field": "position", // data field
            "type": "genomic", // type of data field
            "axis": "top"
        },
        "y": {
            "field": "peak", 
            "type": "quantitative"
        },
        "color": ...,
        ... // other encodings and styles
    }]
}
```

## Bar
[:link: source code](https://github.com/gosling-lang/gosling.js/blob/master/src/core/mark/bar.ts)

The `bar` mark is designed for drawing bar charts. Each bar shows the value of one data point through its height.

<a href="https://gosling-lang.github.io/gosling.js/?example=doc_bar"><img src="/img/doc_images/bar_example.png" width="800" alt="bar_example"/>  </a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?example=doc_bar>)

```javascript
// an example of area marks
{
    "tracks":[{
        "data": {
            "url": ...,
            "type": ...
        },
        // mark type
        "mark": "bar",
        // mark visual channels
        "x": {
            "field": "position", // data field
            "type": "genomic", // type of data field
            "axis": "top"
        },
        // y indicates the visual encoding of the bar height
        "y": {
            "field": "peak", 
            "type": "quantitative"
        },
        ... // other encodings and styles
    }]
}
```

## Rect
[:link: source code](https://github.com/gosling-lang/gosling.js/blob/master/src/core/mark/rect.ts)

The `rect` mark is designed for representing genomic intervals using rectangular shapes. Left and right edge of the rectangle indicate the start and end genomic positions, respectively.

<a href="https://gosling-lang.github.io/gosling.js/?example=doc_rect"><img src="/img/doc_images/rect_example.png" width="800" alt="rect_example"/>  </a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?example=doc_rect>)

```javascript
// an example of rect marks
{
    "traks":[
    {
        "data": ...,
        // specify the type of mark
        "mark": "rect", 
        // bind the color of each rect mark to the data field: Stain
        "color": { 
            "field": "Stain",
            "type": "nominal",,
            "domain": ["gneg", "gpos25", "gpos50", "gpos75", "gpos100", "gvar"],
            "range": ["white", "#D9D9D9", "#979797", "#636363", "black", "#A0A0F2"]
          },
        // bind the start position of each rect mark to the data field: chromStart 
        "x": { 
            "field": "chromStart",
            "type": "genomic",
            "axis": "top"
        },
        // bind the end position of each rect mark to the data field: chromEnd 
        "xe": { 
            "field": "chromEnd", "type": "genomic"
        },
        "size": {
            "value": 30 // specify the constant height of each rect mark
        }
    }, 
    ... // other encodings and styles of the rect mark
    ],
}

```

The `rect` mark can also be used for the matrix visualization of genomic interaction data.

<a href="https://gosling-lang.github.io/gosling.js/?gist=wangqianwen0418/3080e214ec542db3a108fc2890431c4b"><img src="/img/doc_images/rect_matrix_example.png" width="600" alt="rect_matrix_example"/>  </a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?gist=wangqianwen0418/3080e214ec542db3a108fc2890431c4b>)

## Text
[:link: source code](https://github.com/gosling-lang/gosling.js/blob/master/src/core/mark/text.ts)

The `text` mark is designed to display textual labels. For example, gene names and nucleobases can be displayed with `text` marks.

<a href="https://gosling-lang.github.io/gosling.js/?example=doc_text"><img src="/img/doc_images/text_example.png" width="800" alt="text_example"/>  </a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?example=doc_text>)

```javascript
{
    "tracks":[{
      "data": ...,
      
      // specify the type of mark
      "mark": "text", 
      
      // specify styles of the mark
      "style": {"textStrokeWidth": 0},

      // bind visual channels to corresponding data fields
      "x": {"field": "start", "type": "genomic", "axis": "top"},
      "xe": {"field": "end", "type": "genomic"},
      "y": {"field": "count", "type": "quantitative"},
      "color": {
        "field": "base",
        "type": "nominal",
        "domain": ["A", "T", "G", "C"]
      },

      // specify the text content
      "text": {"field": "base", "type": "nominal"} 
    }]
}
```

## Link
[:link: source code](https://github.com/gosling-lang/gosling.js/blob/master/src/core/mark/link.ts)

The **link** mark is designed to show connections between chromosomes.
Gosling supports both `"withinLink"`, links within one track,  and `"betweenLink"`, links between different tracks.

<a href="https://gosling-lang.github.io/gosling.js/?example=doc_link"><img src="/img/doc_images/link_example.png" width="800" alt="link_example"/>  </a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?example=doc_link>)


```javascript
{
  "tracks": [
      {
        "data": {...},

        "mark": "withinLink", // specify the mark type

        // bind visual channels to corresponding data fields

        // x and xe indicates the start point of the arc  
        "x": {
          "field": "s1",
          "type": "genomic",
          "domain": {"chromosome": "1"},
          "axis": "top"
        },
        "xe": {"field": "e1", "type": "genomic"},

        // x and xe indicates the end point of the arc  
        "x1": {
          "field": "s2",
          "type": "genomic",
          "domain": {"chromosome": "1"},
          "axis": "top"
        },
        "x1e": {"field": "e2", "type": "genomic"},

        // specify styles of the mark
        "stroke": {"value": "steelblue"},
        "style": {"circularLink": true}
      }
    ]
}
```

## Triangle
[:link: source code](https://github.com/gosling-lang/gosling.js/blob/master/src/core/mark/triangle.ts)  


<a href="https://gosling-lang.github.io/gosling.js/?example=doc_triangle"><img src="/img/doc_images/triangle.png" width="700" alt="triangle"/> </a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?example=doc_triangle>)

Gosling supports three types of triangle marks: `triangleLeft`, `triangleRight`, `triangleBottom`

```javascript
{
  "tracks": [
      {
        "data": {...},

        "mark": "triangleRight", // specify the mark type

        // bind visual channels to corresponding data fields

        /** x indicates the position of the mark on a genomic axis */
        "x": {
          "field": "end",
          "type": "genomic",
          "axis": "top"
        },
        /** the size of the triangle */
        "size": {"value": 15}
      },

      {
          /** another track */
      },
      ...
    ]
}
```

## Rule 
The `Rule` mark can be used to either create [Gene Annotations](https://gosling.js.org?example=GENE_ANNOTATION) or [Reference lines](https://gosling.js.org/?example=RULE)

<a href="https://gosling-lang.github.io/gosling.js/?example=RULE">
    <img src="https://raw.githubusercontent.com/gosling-lang/gosling.js/da5a0c65b384f7ad13f149e386a4238711517162/editor/example/thumbnails/RULE.png"
    width="400" alt="rule_example"/>  
</a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?example=RULE>)

```javascript
{
  "tracks": [
    /********************
    * a rule track that draws three vertical reference lines
    ********************/
    {
        "mark": "rule",
        "x": {"field": "p", "type": "genomic"}, 
        // define the position of the three reference lines
        "data": {
            "type": "json",
            "values": [
                {"c": "chr2", "p": 100000},
                {"c": "chr5", "p": 100000},
                {"c": "chr10", "p": 100000}
            ],
            "chromosomeField": "c",
            "genomicFields": ["p"]
        },
            // define the styles of the reference lines
            "strokeWidth": {"value": 2},
            "color": {"value": "blue"}
    },
    { /** another track */ },
    ...
    ]
}
```

<a href="https://gosling-lang.github.io/gosling.js/?gist=wangqianwen0418/b061daf712940f5827f0c1e9c95d368b">
    <img src="/img/doc_images/rule_anno_example.png"
    width="600" alt="rule_example"/>  
</a>

[Try it in the online editor](<https://gosling-lang.github.io/gosling.js/?gist=wangqianwen0418/b061daf712940f5827f0c1e9c95d368b>)

```javascript
{
  "tracks": [
    /********************
     ** a gene annotation 
    *********************/
    {
        "data": {...},
        "mark": "rule",
        // one rule mark encodes the start and end postion of a gene
        "xe": {"field": "end", "type": "genomic"},
        "x": {"field": "start", "type": "genomic"},
        // style of the rule mark
        "strokeWidth": {"value": 3},
        "style": {"linePattern": {"type": "triangleRight", "size": 5}}
    },
    { /** another track */ },
    ...
    ]
}
```